# xFlats-Intelligent-Real-Estate-Assistant

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  README.md  doc-update-registry.yml  justfile  opencode.json  pyproject.toml
.agents/skills/implement-github-issue/: SKILL.md  TEMPLATE.md
.agents/skills/pr-address-comments/: SKILL.md
.github/workflows/: ci.yml  deploy.yml
.infrastructure/ec2/: TODO  chromaDB.tf  data.tf  main.tf  secret.tf  user_data.sh  user_data.sh.tpl  user_data_AL2.sh
.infrastructure/iam/: iam.tf  main.tf
.infrastructure/secrets/: .terraform.lock.hcl  chromedb.tf  gemini.tf  output.tf
app/: Dockerfile  README.md  app.py  check_chromadb.py  db.ipynb  environment.yml  list_models.py  main.py  migrate_chromadb.py  new.ipynb  requirements.txt  resume_migration.py  test_embeddings.py  test_final.py  utils.py
docker/: Dockerfile  crontab
docs/: architecture.md
docs/plans/: issue-14-plan.md  issue-2-plan.md  issue-6-plan.md  issue-8-plan.md  issue-9-plan.md
infra/ec2/: README.md  chromaDB.tf  main.tf  public_ip.txt  user_data.sh
infra/ecr/: data.tf  main.tf
infra/iam/: iam.tf  main.tf  output.tf
infra/s3/: main.tf
infra/secrets/: data.tf  main.tf  telegram.tf
lambda-crawler/: README.TOOLKIT.md  README.md  samconfig.toml  template.yaml
lambda-crawler/develop/: app.py  db.ipynb
notebooks/: new.ipynb
scripts/: backup_chromadb.sh
src/xflats/: __init__.py  main.py  utils.py
tests/: conftest.py
tests/unit/: test_extraction.py  test_notifications.py  test_otodom.py  test_scraper.py  test_storage.py
(+11 files in other folders)
