[project]
name = "xflats"
version = "0.1.0"
description = "Intelligent Real Estate Assistant for Danish property market"
requires-python = ">=3.14"
dependencies = [
    "google-genai==1.7.0",
    "google-api-core",
    "chromadb",
    "boto3",
    "requests",
    "beautifulsoup4",
    "pydantic",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "detect-secrets>=1.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
src = ["src", "tests"]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W", "D", "T20", "BLE"]
ignore = ["E501", "D100", "D104", "D105", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[build-system]
requires = ["uv_build>=0.6.6"]
build-backend = "uv_build"
